[GStreamer] ASSERT triggered when attempting a seek on a paused pipeline playing an http URI https://bugs.webkit.org/show_bug.cgi?id=290178

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcDoSeek): Remove the assert checking for the element current state, nothing prevents a
paused pipeline to process a seek event.

Canonical link: https://commits.webkit.org/297575@main